Fix some tab spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@
   border: 0px;
   background-color: transparent;
   height: 100%;
-  min-width: 150px;
+  min-width: 10%;
   font-size: 1em;
   transition-duration: 0.2s;
   font-family: bit;
@@ -206,6 +206,6 @@
 }
 
 .example-text {
-  font-size: calc(4px + 1vmin);
+  font-size: calc(9px + 1vmin);
   margin: 0;
 }
