--- a/src/projects/ScryPortal/ScryPortal.css
+++ b/src/projects/ScryPortal/ScryPortal.css
@@ -26,7 +26,7 @@
     border: 0px;
     background-color: transparent;
     height: 100%;
-    min-width: 150px;
+    min-width: 10%;
     font-size: 1em;
     transition-duration: 0.2s;
 }
