--- a/src/projects/Weaponsmith/Weaponsmith.css
+++ b/src/projects/Weaponsmith/Weaponsmith.css
@@ -29,7 +29,7 @@
     border: 0px;
     background-color: transparent;
     height: 100%;
-    min-width: 150px;
+    min-width: 10%;
     font-size: 1em;
     transition-duration: 0.2s;
     color: #2B2B27;
